# fid

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: pre-commit.yml
fid/: __init__.py  __main__.py  commands.py  config.py  fid.py  models.py  tui.py  utils.py
pal/: __main__.py  config.py  config.yaml  models.py  pal.py
