[project]
name = "pal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer", "rich", "pydantic-ai", "readchar"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/chamanbravo/pal"
Repository = "https://github.com/chamanbravo/pal"
Issues = "https://github.com/chamanbravo/pal/issues"

[tool.ruff]
src = ["./pal"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
executionEnvironments = [{ root = "pal" }]
include = ["pal"]
